# DeepLang

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  lint-code.sh  pragma-checker.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-tests.yml  doxygen-docs.yml
docs/: Doxyfile
include/: CMakeLists.txt  main_loop.h
include/ast/: CMakeLists.txt  ast.h
include/codegen/: codegen.h
include/lexer/: CMakeLists.txt  token.h  utils.h
include/parser/: CMakeLists.txt  parser.h  top_level_parsing.h
include/utils/: check_type.h
lib/: CMakeLists.txt  main_loop.cc
lib/ast/: CMakeLists.txt  ast.cc
lib/codegen/: CMakeLists.txt  codegen.cc  conditional_codegen.cc  function_codegen.cc  loop_codegen.cc  var_expr_codegen.cc
lib/lexer/: CMakeLists.txt  README.md  next_token.cc  token.cc  utils.cc
lib/parser/: CMakeLists.txt  conditional_parser.cc  loop_parser.cc  parser.cc  parser_ast.cc  struct_parser.cc  top_level_parsing.cc  value_parser.cc  var_expression_parser.cc
lib/utils/: CMakeLists.txt  check_type.cc
src/: CMakeLists.txt  main.cc
tests/: CMakeLists.txt  hello_test.cc  sum_test.cc  test.txt
